[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamixel-wrapper"
version = "1.0.0"
description = "A Python wrapper for Dynamixel SDK to simplify robot control."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["dynamixel-sdk>=3.8.4, <4"]

[tool.setuptools]
packages = ["dynamixel_wrapper"]
